fix accordion final size jump on opening

--- a/src/app/components/RedigimAccordion.module.css
+++ b/src/app/components/RedigimAccordion.module.css
@@ -68,5 +68,9 @@
     }
         .panel{
             box-sizing: border-box;
-            padding: 0 .75rem;
+            padding: 0 .75rem .75rem;
+        }
+
+        .panel :last-child{
+            margin-bottom: 0;
         }
